--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/node": "16.18.25",
     "@types/react": "18.2.74",
     "@types/react-dom": "18.2.1",
-    "axios": "^1.4.0",
+    "axios": "^1.9.0",
     "bootstrap": "5.2.3",
     "formik": "2.2.9",
     "react": "18.2.0",
@@ -50,6 +50,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "@types/react-redux": "^7.1.34",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
